# reos

./: .gitignore  404.html  Cargo.toml  LICENSE.md  README.md  index.html  konteo_1_mod.json  map.txt  mkdocs.yml  output_2.txt  resultado_testes.txt  test.json  test_map.txt
crates/reos_py/: Cargo.toml  README.md  pyproject.toml
crates/reos_py/py/: eeos_v2_debug.ipynb  eos.py  phase_diagram.py  reos_validation.py  water_saturation.py
crates/reos_py/py/aux/: __init__.py  data.py  vle_functions.py
crates/reos_py/py/auxiliary_functions/: data.py  parameters.py  vle_functions.py  wsat_data.py
crates/reos_py/src/: lib.rs
crates/reos_py/src/py_eos/: mod.rs  py_association.rs  py_residual.rs
crates/reos_py/src/py_eos/cpa/: mod.rs  py_association.rs
crates/reos_py/src/py_eos/cubic/: mod.rs
crates/reos_py/src/py_eq/: mod.rs
crates/reos_py/src/py_parameters/: mod.rs  pyrecords.rs
crates/reos_py/src/py_state/: mod.rs
docs/: about.md  index.md
eeos/: Cargo.toml  eeos_v2(srk+pr).rar  pyproject.toml
package/: p.json
parameters/: substances.json
pyreos/: Cargo.toml  README.md  pyproject.toml
pyreos-dev/: rtests.sh
python-examples/: assoc.py  phase_diagram.py  reos_validation.ipynb  water_saturation_co2.py
python_examples/: association.py  estim.py  phase_diagram.py  pure_water.py  reos_colab.ipynb  water_compressibility.py  water_psat.py  wsat_co2.py  wsat_co2_ch4.py  wsat_h2s.py
reos_py/: Cargo.toml
search/: search_index.json
site/: 404.html  about.html  index.html
src/: core.rs  eos.rs  lib.rs  main.rs  parameters.rs  stability.rs  tools.rs
(+234 files in other folders)
