[package]
name = "reos_py"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "reos"
crate-type = ["cdylib"]

[dependencies]
pyo3 = {version="0.24.0",features=["multiple-pymethods"]}
numpy = "0.24"

reos= {path="../reos"}