[package]
name = "reos_py"
version = "0.0.1"
edition = "2021"
repository="https://github.com/Emanukka/reos"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

name = "reos"
crate-type = ["cdylib"]

[dependencies]

pyo3 = {version="0.24.0",features=["multiple-pymethods"]}
numpy = "0.24"
reos= {path="../reos"}